--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ html {
 }
 
 .homeIcon,
-.faqIcon {
+.faqIcon,
+.bookIcon {
   display: none;
 }
 
@@ -337,15 +338,6 @@ html {
   margin: 15px;
 }
 
-/* .tripsDeco {
-  height: auto;
-  width: 270px;
-  position: absolute;
-  margin-top: 360px;
-}
-.tripsDeco:last-of-type {
-  margin-top: 170px;
-} */
 .readMoreTrip {
   display: flex;
   font-size: 14px;
@@ -1550,55 +1542,6 @@ select:after {
   font-family: "Brandon Text Light";
 }
 
-/* -------- GALLERY ------- */
-/* new gallery */
-.carousel {
-  background: var(--dark-blue);
-}
-.carousel-cell {
-  width: 100%;
-  /* height: 200px; */
-  /* flex-box, center image in cell */
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.carousel-cell img {
-  display: block;
-  max-width: 100%;
-  /* dim unselected */
-  opacity: 0.7;
-  -webkit-transform: scale(0.85);
-  transform: scale(0.85);
-  -webkit-filter: blur(5px);
-  filter: blur(5px);
-  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s, transform 0.3s,
-    -webkit-filter 0.3s, filter 0.3s;
-  transition: opacity 0.3s, transform 0.3s, filter 0.3s;
-}
-/* brighten selected image */
-.carousel-cell.is-selected img {
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  -webkit-filter: none;
-  filter: none;
-}
-@media screen and (min-width: 768px) {
-  .carousel-cell {
-    height: 400px;
-  }
-}
-@media screen and (min-width: 960px) {
-  .carousel-cell {
-    width: 60%;
-  }
-}
 /* buttons, no circle */
 .flickity-prev-next-button {
   width: 60px;
@@ -1961,8 +1904,8 @@ select:after {
     display: none;
   }
   #navBar a:last-of-type {
-    padding: 25px;
-    font-size: 16px;
+    /* padding: 25px; */
+    font-size: 14px;
     color: var(--dark-blue) !important;
     background-color: var(--yellow);
   }
@@ -1979,9 +1922,14 @@ select:after {
   .changeMenu {
     bottom: 0;
   }
-  .homeIcon,
-  .faqIcon {
+  .faqIcon,
+  .bookIcon {
     width: 30px;
+    height: auto;
+    display: block;
+  }
+  .homeIcon {
+    width: 25px;
     height: auto;
     display: block;
   }
