--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ html {
 }
 
 #navBar a {
-  color: white;
+  color: #000;
   font-size: 14px;
   cursor: pointer !important;
   text-decoration: none;
@@ -101,7 +101,8 @@ html {
 /* sticky navBar */
 .changeMenu {
   margin-inline-start: auto;
-  background-color: rgb(42, 49, 65, 0.9);
+  /* background-color: rgb(42, 49, 65, 0.9); */
+  background: var(--light-beige);
 }
 
 #navBar a:hover {
@@ -679,10 +680,9 @@ html {
   width: 70%;
   align-self: center;
   font-family: "Proxima Nova Regular";
-  text-align: left;
   display: none;
   margin: 30px 0;
-  text-align: left;
+  text-align: center;
 }
 
 .corona-guidelines {
@@ -693,9 +693,10 @@ html {
   color: white;
   background-color: var(--light-blue);
   cursor: pointer;
-  display: flex;
+  /*   display: flex; */
   align-self: center;
-  border-radius: 15px;
+  width: 100%;
+  /*   border-radius: 15px; */
   /* box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15); */
 }
 
