--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ html {
   justify-content: flex-end;
 }
 
-#navBar a {
+#navBar a,
+#navBar button {
   color: #000;
   font-size: 14px;
   cursor: pointer !important;
@@ -108,7 +109,7 @@ html {
 }
 
 #navBar a:hover {
-  color: var(--yellow);
+  color: var(--light-blue);
 }
 
 .addStyle {
@@ -121,6 +122,48 @@ html {
   color: var(--yellow) !important;
   background-color: var(--yellow);
   color: var(--dark-blue) !important;
+}
+
+/* language option */
+.dropbtn {
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+.translate {
+  width: 30px;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  background-color: #e7e6e6;
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content img {
+  margin-right: 10px;
+}
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  align-self: center;
+}
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+/* flags */
+.en,
+.da {
+  width: 20px;
 }
 
 /* --------- HERO SECTION -------- */
@@ -671,13 +714,12 @@ html {
 .coronaText {
   margin: 30px;
   line-height: 1.8;
-  text-align: justify;
-  width: 70%;
+  width: 35%;
   align-self: center;
   font-family: "Proxima Nova Regular";
   display: none;
   margin: 30px 0;
-  text-align: center;
+  text-align: left;
 }
 
 .corona-guidelines {
@@ -1275,7 +1317,7 @@ select:after {
   background: white;
   border: none;
   color: var(--dark-blue);
-  padding: 30px;
+  padding: 50px;
   margin: 10% auto;
   width: 50%;
   text-align: justify;
