--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ html {
   position: fixed;
   width: 100%;
   z-index: 10;
+  border-bottom: 1px solid white;
 }
 
 #logo {
@@ -85,11 +86,12 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  
 }
 
 #navBar a,
 #navBar button {
-  color: #000;
+  color: white;
   font-size: 14px;
   cursor: pointer !important;
   text-decoration: none;
@@ -106,6 +108,10 @@ html {
   margin-inline-start: auto;
   /* background-color: rgb(42, 49, 65, 0.9); */
   background: var(--light-beige);
+}
+
+.changeLinks {
+  color: black;
 }
 
 #navBar a:hover {
@@ -174,6 +180,7 @@ html {
   display: inline;
   text-align: center;
   position: absolute;
+  opacity: 0.5;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -186,7 +193,7 @@ html {
   max-height: 700px;
   width: 100%;
   /* filter: contrast(80%); */
-  filter: brightness(0.8);
+  filter: brightness(0.6);
   /* box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4); */
 }
 
@@ -275,10 +282,7 @@ html {
 #singleTripArea {
   margin: 0 20px;
   border-radius: 10px;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    0 100px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.2);
 }
 
 #cardWrapper {
@@ -456,7 +460,7 @@ html {
   }
   100% {
     opacity: 1;
-    background: var(--light-beige);
+    border: 0.5px solid var(--light-blue);
   }
 }
 
@@ -1449,7 +1453,8 @@ select:after {
   margin: 25px 0;
 }
 .paymentForm .payment-type .types .type {
-  width: 30%;
+  width: 150px;
+  height: 150px;
   position: relative;
   background: #f2f4f7;
   border: 2px solid #e8ebed;
