--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  
 }
 
 #navBar a,
@@ -454,13 +453,15 @@ html {
 @keyframes flash {
   0% {
     opacity: 1;
+    border: 4px solid transparent;
   }
   50% {
     opacity: 0.3;
+    border: 4px solid transparent;
   }
   100% {
     opacity: 1;
-    border: 0.5px solid var(--light-blue);
+    border: 4px solid var(--light-beige);
   }
 }
 
@@ -1225,10 +1226,10 @@ select:after {
   width: min-content;
   left: 0;
   right: 0;
-  margin: auto;
-  /* border: 1px solid var(--dark-blue); */
+  margin: 100px auto;
+  border: 1px solid var(--light-blue);
   border-radius: 5px;
-  /* background: rgba(0, 0, 0, 0.6); */
+  background: rgba(0, 0, 0, 0.6);
   /* background-color: rgb(42, 49, 65, 0.9); */
 }
 
